--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.hibernate-core-5.2.17.Final.jar=C:\\Users\\Nneka Okafor\\Documents\\NetBeansProjects\\sample-hibernate\\libs\\required\\hibernate-core-5.2.17.Final.jar
 file.reference.mysql-connector-java-8.0.13.jar=C:\\Users\\Nneka Okafor\\Documents\\java docs\\mysql-connector-java-8.0.13.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
-j2ee.deploy.on.save=true
+j2ee.deploy.on.save=false
 j2ee.platform=1.7-web
 j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/cdi-api.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.el.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
@@ -48,7 +49,8 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${libs.hibernate4-persistence.classpath}:\
     ${file.reference.mysql-connector-java-8.0.13.jar}:\
-    ${libs.jsf20.classpath}
+    ${libs.jsf20.classpath}:\
+    ${file.reference.hibernate-core-5.2.17.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
