--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.hibernate-core-5.2.17.Final.jar=C:\\Users\\Nneka Okafor\\Documents\\NetBeansProjects\\sample-hibernate\\libs\\required\\hibernate-core-5.2.17.Final.jar
-file.reference.mysql-connector-java-8.0.13.jar=C:\\Users\\Nneka Okafor\\Documents\\java docs\\mysql-connector-java-8.0.13.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -48,9 +46,8 @@ javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
     ${libs.hibernate4-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.13.jar}:\
     ${libs.jsf20.classpath}:\
-    ${file.reference.hibernate-core-5.2.17.Final.jar}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
